--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
           </li>
           <li>
             <a class = "text-secondary text-decoration-none"
-               href="{{ url_for('authors/<author_name>') }}"
+               href="https://arunshamli-etlp2.herokuapp.com/authors/Albert%20Einstein"
               target="_blank"
             >
               Get a particular Author (Albert Einstein)
@@ -54,7 +54,7 @@
 
           <li>
             <a class = "text-secondary text-decoration-none"
-               href="{{ url_for('tags/<tag_name>') }}"
+               href="https://arunshamli-etlp.herokuapp.com/tags/love"
               target="_blank"
             >
               Get a particualr tag ( love for example)
