--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,8 @@
           </li>
           <li>
             <a class = "text-secondary text-decoration-none"
-               href="https://arunshamli-etlp2.herokuapp.com/authors/Albert%20Einstein"
+               href="{{ url_for('authors') }}/Albert%20Einstein"
+<!--                href="https://arunshamli-etlp2.herokuapp.com/authors/Albert%20Einstein" -->
               target="_blank"
             >
               Get a particular Author (Albert Einstein)
@@ -54,7 +55,8 @@
 
           <li>
             <a class = "text-secondary text-decoration-none"
-               href="https://arunshamli-etlp.herokuapp.com/tags/love"
+               href="{{ url_for('tags') }}/love"
+<!--                href="https://arunshamli-etlp.herokuapp.com/tags/love" -->
               target="_blank"
             >
               Get a particualr tag ( love for example)
